Fixed font style and fixed wedding timeline text alignement

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,12 +17,6 @@ body {
   background: var(--background);
 }
 
-.font-script {
-  font-family: "Rouge Script", cursive;
-  font-weight: 400;
-  font-style: normal;
-}
-
 .form-control:focus {
   border-color: #8b8585;
 }
